# ducktools-env

./: .gitignore  README.md  plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflow_templates/: auto_test.yml
.github/workflows/: auto_test.yml  build_zipapp.yml  publish_to_pypi.yml  publish_to_testpypi.yml  test_builds.yml
docs/: application_environments.md
examples/application/: cowsay_ex.py
examples/inline/: cowsay_ex.py  cowsay_ex.pyz  empty_40_env.py  print_environment_variables.py
scripts/: clear_envs.py  create_zipapp.py  print_python_versions.py
scripts/bootstrap/: online.py
src/ducktools/env/: __init__.py  __main__.py  _lazy_imports.py  _run.py  _sqlclasses.py  _version.py  bundle.py  bundled_data.py  catalogue.py  config.py  constants.py  environment_specs.py  exceptions.py  manager.py  platform_paths.py  register.py  sql_catalogue.py
src/ducktools/env/bootstrapping/: bootstrap.py  bundle_main.py  version_check.py  zipapp_main.py
src/ducktools/env/bundle/: __init__.py  bundle_main.py
src/ducktools/env/core/: __init__.py
src/ducktools/env/lib/: catalogue.py  config.py
src/ducktools/env/run/: __init__.py  __main__.py  environment_spec.py
src/ducktools/env/scripts/: bootstrap.py  clear_envs.py  create_zipapp.py  get_pip.py  get_uv.py
src/ducktools/envman/: __init__.py  __init__.pyi  __main__.py  build_env.py  catalogue.py  config.py  env_cache_db.py  environment_spec.py  exceptions.py
src/ducktools/envman/env_builder/: __init__.py  pyenv_finder.py
src/ducktools/envman/inline_dependencies/: __init__.py
src/ducktools/envman/python_finders/: __init__.py  pyenv_finder.py  shared.py  syspython_unix.py  win_registrysearch.py  winpy_finder.py
tests/: conftest.py  test_catalogue.py  test_config.py  test_environmentspec.py  test_fixtures_active.py  test_get_pip.py  test_get_uv.py  test_manager.py  test_platform_paths.py  test_sql_classes.py  test_sqlcatalogue.py
tests/test_integration/: test_build_retrieve.py
tests/test_python_managers/: test_pyenv.py  test_winpy.py
