[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "ducktools-env"
description = "Virtual environment management tools and application bundle builder"
authors = [
    { name = "David C Ellis" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ducktools-classbuilder>=0.12.6",
    "ducktools-lazyimporter>=0.8.4",
    "ducktools-scriptmetadata>=0.2.1",
    "ducktools-pythonfinder>=0.10.5",
    "packaging>=26.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["version"]

[project.scripts]
"ducktools-env" = "ducktools.env.__main__:main"
"dtrun" = "ducktools.env._run:run"

[dependency-groups]
dev = [
    "coverage-conditional-plugin>=0.9.0",
    "pytest>=9.0",
    "pytest-cov>=7.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/ducktools/env/_version.py"
version_file_template = """
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

[tool.pytest.ini_options]
addopts = "--cov=src/ --cov-report=term-missing --cov-report xml:cov.xml"
testpaths = [
    "tests",
]

[tool.coverage.run]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.coverage_conditional_plugin.rules]
# This tool works backwards - it really means no cover if <condition>
skip-if-os-win32 = "sys_platform == 'win32'"
skip-if-os-other = "sys_platform != 'win32'"
